# projet-7-api

./: .gitignore  README.md  app.py  app_test_files_creation.py  note_methodologique.md  pyproject.toml  requirements.txt
.github/workflow/: ci.yaml
.github/workflows/: cd  cd.yml  ci.yml
api/: app.py  app_test.py
api/LGBMClassifier_model__bayes_search__randomundersampler_balancing__tuning_run/: MLmodel  model.pkl  shap_explainer_LGBMClassifier_version_18.pkl
api/LGBMClassifier_model__bayes_search__randomundersampler_balancing__tuning_run/metadata/: conda.yaml  python_env.yaml  requirements.txt
tests/: test_app.py
