[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["zerippeur <zerippeur@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
joblib = "^1.3.2"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
ray = {extras = ["serve"], version = "^2.9.0"}
pandas = "^2.1.4"
xgboost = "^2.0.3"
jupyter = "^1.0.0"
mlflow = "^2.9.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.9.23"
isort = "^5.10.1"
pylint = "^2.15.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
